--- a/collated/test/A0163848R.md
+++ b/collated/test/A0163848R.md
@@ -7,7 +7,7 @@
 public class TaskFactoryTest {
 
     @Test
-    public void isTask() {
+    public void isValidTask() {
 
         Object task = null;
 
@@ -18,34 +18,10 @@ public class TaskFactoryTest {
                     new Group("Vacation"),
                     new StartDate("today"),
                     new EndDate("tomorrow"),
-                    UniqueTagList.build());
+                    UniqueTagList.build(Tag.TAG_INCOMPLETE));
         } catch (IllegalValueException e) {
-            e.printStackTrace();
         }
         assertTrue(task instanceof Task);
-
-        // Test: Is DeadlineTask
-        try {
-            task = Task.factory(
-                    new Name("Go to the beach"),
-                    new Group("Vacation"),
-                    new EndDate("tomorrow"),
-                    UniqueTagList.build());
-        } catch (IllegalValueException e) {
-            e.printStackTrace();
-        }
-        assertTrue(task instanceof DeadlineTask);
-
-        // Test: Is FloatingTask
-        try {
-            task = Task.factory(
-                    new Name("Go to the beach"),
-                    new Group("Vacation"),
-                    UniqueTagList.build());
-        } catch (IllegalValueException e) {
-            e.printStackTrace();
-        }
-        assertTrue(task instanceof FloatingTask);
 
         // Test: No end date
         try {
@@ -53,24 +29,10 @@ public class TaskFactoryTest {
                     new Name("Go to the beach"),
                     new Group("Vacation"),
                     new StartDate("today"),
-                    UniqueTagList.build());
+                    UniqueTagList.build(Tag.TAG_INCOMPLETE));
         } catch (IllegalValueException e) {
-            e.printStackTrace();
-            assertTrue(false);
         }
-
-     // Test: End date before start date
-        try {
-            task = Task.factory(
-                    new Name("Go to the beach"),
-                    new Group("Vacation"),
-                    new StartDate("tomorrow"),
-                    new EndDate("today"),
-                    UniqueTagList.build());
-        } catch (IllegalValueException e) {
-            e.printStackTrace();
-            assertTrue(false);
-        }
+        assertTrue(task == null);
 
         // Test: without required field (UniqueTagList)
         try {
@@ -80,8 +42,7 @@ public class TaskFactoryTest {
                     new StartDate("today"),
                     new EndDate("tomorrow"));
         } catch (IllegalValueException e) {
-            e.printStackTrace();
-            assertTrue(false);
+            assertTrue(true);
         }
     }
 }
