--- a/collated/test/A0164032U.md
+++ b/collated/test/A0164032U.md
@@ -222,7 +222,7 @@ public class HelpWindowTest extends AddressBookGuiTest {
 ```
 ###### /java/seedu/address/logic/LogicManagerTest.java
 ``` java
-        /** Generates the correct add command based on the person given */
+        /** Generates the correct add command based on the task given */
         String generateAddCommand(ReadOnlyTask p) {
             StringBuffer cmd = new StringBuffer();
 
