--- a/collated/test/A0164466X.md
+++ b/collated/test/A0164466X.md
@@ -1,4 +1,104 @@
 # A0164466X
+###### /java/seedu/address/logic/LogicManagerTest.java
+``` java
+        /** Generates the complete list */
+        String generateListCompleteCommand() {
+            return "lc ";
+        }
+
+        /** Generates the incomplete list */
+        String generateListIncompleteCommand(ReadOnlyTask p) {
+            return "li";
+        }
+
+        /** Generates the correct mark command based on the index given */
+        String generateMarkCommand(int index) {
+            StringBuffer cmd = new StringBuffer();
+
+            cmd.append("mark ");
+            cmd.append(index);
+
+            return cmd.toString();
+        }
+
+        /** Generates the correct unmark command based on the index given */
+        String generateUnmarkCommand(int index) {
+            StringBuffer cmd = new StringBuffer();
+
+            cmd.append("unmark ");
+            cmd.append(index);
+
+            return cmd.toString();
+        }
+
+        /**
+         * Generates an AddressBook with auto-generated persons.
+         */
+        YTomorrow generateAddressBook(int numGenerated) throws Exception {
+            YTomorrow addressBook = new YTomorrow();
+            addToAddressBook(addressBook, numGenerated);
+            return addressBook;
+        }
+
+        /**
+         * Generates an AddressBook based on the list of Persons given.
+         */
+        YTomorrow generateAddressBook(List<Task> persons) throws Exception {
+            YTomorrow addressBook = new YTomorrow();
+            addToAddressBook(addressBook, persons);
+            return addressBook;
+        }
+
+        /**
+         * Adds auto-generated Person objects to the given AddressBook
+         * @param addressBook The AddressBook to which the Persons will be added
+         */
+        void addToAddressBook(YTomorrow addressBook, int numGenerated) throws Exception {
+            addToAddressBook(addressBook, generatePersonList(numGenerated));
+        }
+
+        /**
+         * Adds the given list of Persons to the given AddressBook
+         */
+        void addToAddressBook(YTomorrow addressBook, List<Task> personsToAdd) throws Exception {
+            for (Task p: personsToAdd) {
+                addressBook.addTask(p);
+            }
+        }
+
+        /**
+         * Adds auto-generated Person objects to the given model
+         * @param model The model to which the Persons will be added
+         */
+        void addToModel(Model model, int numGenerated) throws Exception {
+            addToModel(model, generatePersonList(numGenerated));
+        }
+
+        /**
+         * Adds the given list of Persons to the given model
+         */
+        void addToModel(Model model, List<Task> personsToAdd) throws Exception {
+            for (Task p: personsToAdd) {
+                model.addTask(p);
+            }
+        }
+
+        /**
+         * Generates a list of Persons based on the flags.
+         */
+        List<Task> generatePersonList(int numGenerated) throws Exception {
+            List<Task> persons = new ArrayList<>();
+            for (int i = 1; i <= numGenerated; i++) {
+                persons.add(generatePerson(i));
+            }
+            return persons;
+        }
+
+        List<Task> generatePersonList(Task... persons) {
+            return Arrays.asList(persons);
+        }
+
+```
 ###### /java/seedu/address/ui/TestFxmlObject.java
 ``` java
 /**
