Update collated files

--- a/collated/main/A0146809W.md
+++ b/collated/main/A0146809W.md
@@ -597,8 +597,8 @@ import seedu.doit.logic.commands.IncorrectCommand;
  */
 public class AddCommandParser implements CommandParser {
 
-    private final String LOW_PRIORITY = "low";
-    private final String EMPTY_STRING = "";
+    private static final String LOW_PRIORITY = "low";
+    private static final String EMPTY_STRING = "";
 
     /**
      * Parses the given {@code String} of arguments in the context of the AddCommand
@@ -634,9 +634,7 @@ public class AddCommandParser implements CommandParser {
      * Returns all values of given prefix after the prefix.
      */
     public Optional<List<String>> getAllValuesAfterPrefixAndSpaces(Prefix prefix) {
-        final int FIRST_INDEX = 0;
-        final String EMPTY_STRING = "";
-        final String WHITE_SPACE_STRING = " ";
+
         if (!this.tokenizedArguments.containsKey(prefix)) {
             return Optional.empty();
         }
