--- a/collated/main/A0097141H.md
+++ b/collated/main/A0097141H.md
@@ -1,5 +1,5 @@
 # A0097141H
-###### /java/seedu/taskit/logic/commands/FindCommand.java
+###### \java\seedu\taskit\logic\commands\FindCommand.java
 ``` java
 /**
  * Finds and lists all tasks in database whose name contains any of the argument keywords.
@@ -27,7 +27,7 @@ public class FindCommand extends Command {
     }
 
 ```
-###### /java/seedu/taskit/logic/parser/FindCommandParser.java
+###### \java\seedu\taskit\logic\parser\FindCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new FindCommand object
@@ -54,7 +54,7 @@ public class FindCommandParser {
 
 
 ```
-###### /java/seedu/taskit/logic/parser/FindCommandParser.java
+###### \java\seedu\taskit\logic\parser\FindCommandParser.java
 ``` java
     /**
      * Method to separate keywords by whitespace or double inverted commas
@@ -90,7 +90,7 @@ public class FindCommandParser {
     }
 
 ```
-###### /java/seedu/taskit/logic/parser/FindCommandParser.java
+###### \java\seedu\taskit\logic\parser\FindCommandParser.java
 ``` java
     /**
      * returns indexes of occurrences of '\"'
@@ -125,7 +125,7 @@ public class FindCommandParser {
     }
 
 ```
-###### /java/seedu/taskit/logic/parser/FindCommandParser.java
+###### \java\seedu\taskit\logic\parser\FindCommandParser.java
 ``` java
     /**
      * simple method to return a String[] array based on 2 String[] arrays
@@ -143,7 +143,7 @@ public class FindCommandParser {
 
 }
 ```
-###### /java/seedu/taskit/model/ModelManager.java
+###### \java\seedu\taskit\model\ModelManager.java
 ``` java
     private class NameQualifier implements Qualifier {
         private Set<String> nameKeyWords;
@@ -210,7 +210,7 @@ public class FindCommandParser {
     }
 
 ```
-###### /java/seedu/taskit/model/task/Date.java
+###### \java\seedu\taskit\model\task\Date.java
 ``` java
     public boolean isDateEqualsDate(Date other) {
 
@@ -233,7 +233,7 @@ public class FindCommandParser {
 
 }
 ```
-###### /java/seedu/taskit/model/task/ReadOnlyTask.java
+###### \java\seedu\taskit\model\task\ReadOnlyTask.java
 ``` java
     /**
      * Stringifies title and tags
