--- a/collated/main/A0141011J.md
+++ b/collated/main/A0141011J.md
@@ -1,5 +1,5 @@
 # A0141011J
-###### /java/seedu/taskit/commons/events/storage/StorageFilePathChangedEvent.java
+###### \java\seedu\taskit\commons\events\storage\StorageFilePathChangedEvent.java
 ``` java
 /** Indicates the TaskManager in the model has changed*/
 public class StorageFilePathChangedEvent extends BaseEvent {
@@ -19,7 +19,7 @@ public class StorageFilePathChangedEvent extends BaseEvent {
     }
 }
 ```
-###### /java/seedu/taskit/commons/exceptions/NoValidStateException.java
+###### \java\seedu\taskit\commons\exceptions\NoValidStateException.java
 ``` java
 /**
  * Represents an error when there are no valid state to restore to
@@ -32,7 +32,7 @@ public class NoValidStateException extends Exception {
     }
 }
 ```
-###### /java/seedu/taskit/logic/commands/ChangePathCommand.java
+###### \java\seedu\taskit\logic\commands\ChangePathCommand.java
 ``` java
 /**
  * Specify a specific folder to change storage file path to
@@ -91,7 +91,7 @@ public class ChangePathCommand extends Command {
     }
 }
 ```
-###### /java/seedu/taskit/logic/commands/ClearCommand.java
+###### \java\seedu\taskit\logic\commands\ClearCommand.java
 ``` java
     @Override
     public boolean isUndoable() {
@@ -99,7 +99,7 @@ public class ChangePathCommand extends Command {
     }
 }
 ```
-###### /java/seedu/taskit/logic/commands/Command.java
+###### \java\seedu\taskit\logic\commands\Command.java
 ``` java
     /**
      * Provides the command history for current command executed.
@@ -114,7 +114,7 @@ public class ChangePathCommand extends Command {
     }
 }
 ```
-###### /java/seedu/taskit/logic/commands/DeleteCommand.java
+###### \java\seedu\taskit\logic\commands\DeleteCommand.java
 ``` java
 /**
  * Deletes a task identified using it's last displayed index from TaskIt.
@@ -158,7 +158,7 @@ public class DeleteCommand extends Command {
     }
 
 ```
-###### /java/seedu/taskit/logic/commands/DeleteCommand.java
+###### \java\seedu\taskit\logic\commands\DeleteCommand.java
 ``` java
     @Override
     public boolean isUndoable() {
@@ -166,21 +166,21 @@ public class DeleteCommand extends Command {
     }
 }
 ```
-###### /java/seedu/taskit/logic/commands/EditCommand.java
+###### \java\seedu\taskit\logic\commands\EditCommand.java
 ``` java
     public boolean isUndoable() {
         return true;
     }
 }
 ```
-###### /java/seedu/taskit/logic/commands/FindCommand.java
+###### \java\seedu\taskit\logic\commands\FindCommand.java
 ``` java
     public boolean isUndoable() {
         return true;
     }
 }
 ```
-###### /java/seedu/taskit/logic/commands/ListCommand.java
+###### \java\seedu\taskit\logic\commands\ListCommand.java
 ``` java
     @Override
     public boolean isUndoable() {
@@ -188,7 +188,7 @@ public class DeleteCommand extends Command {
     }
 }
 ```
-###### /java/seedu/taskit/logic/commands/RedoCommand.java
+###### \java\seedu\taskit\logic\commands\RedoCommand.java
 ``` java
 /**
  * Redo the previously undone command
@@ -216,7 +216,7 @@ public class RedoCommand extends Command {
 
 }
 ```
-###### /java/seedu/taskit/logic/commands/SaveCommand.java
+###### \java\seedu\taskit\logic\commands\SaveCommand.java
 ``` java
 /**
  * Specify a specific folder and a file to output data file
@@ -259,7 +259,7 @@ public class SaveCommand extends Command{
 
 }
 ```
-###### /java/seedu/taskit/logic/commands/SelectCommand.java
+###### \java\seedu\taskit\logic\commands\SelectCommand.java
 ``` java
     @Override
     public CommandResult execute() throws CommandException {
@@ -277,7 +277,7 @@ public class SaveCommand extends Command{
 
 }
 ```
-###### /java/seedu/taskit/logic/commands/UndoCommand.java
+###### \java\seedu\taskit\logic\commands\UndoCommand.java
 ``` java
 /**
  * Undo the last undoable command.
@@ -309,7 +309,7 @@ public class UndoCommand extends Command{
     }
 }
 ```
-###### /java/seedu/taskit/logic/parser/ChangePathCommandParser.java
+###### \java\seedu\taskit\logic\parser\ChangePathCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new ChangePathCommand object
@@ -331,7 +331,7 @@ public class ChangePathCommandParser {
     }
 }
 ```
-###### /java/seedu/taskit/logic/parser/SaveCommandParser.java
+###### \java\seedu\taskit\logic\parser\SaveCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new SaveCommand object
@@ -354,7 +354,7 @@ public class SaveCommandParser {
     }
 }
 ```
-###### /java/seedu/taskit/MainApp.java
+###### \java\seedu\taskit\MainApp.java
 ``` java
     @Subscribe
     public void handleStorageChangedEvent(StorageFilePathChangedEvent event) throws DataConversionException {
@@ -381,7 +381,7 @@ public class SaveCommandParser {
     }
 }
 ```
-###### /java/seedu/taskit/model/Model.java
+###### \java\seedu\taskit\model\Model.java
 ``` java
     /** Reverts to the previous state*/
     void revert() throws NoValidStateException;
@@ -394,7 +394,7 @@ public class SaveCommandParser {
 
 }
 ```
-###### /java/seedu/taskit/model/ModelManager.java
+###### \java\seedu\taskit\model\ModelManager.java
 ``` java
     //========== Inner classes/functions used for filtering =================================================
 
@@ -439,7 +439,7 @@ public class SaveCommandParser {
     }
 }
 ```
-###### /java/seedu/taskit/model/tag/Tag.java
+###### \java\seedu\taskit\model\tag\Tag.java
 ``` java
 /**
  * Represents a Tag in TaskIt.
@@ -507,7 +507,7 @@ public class Tag {
     }
 }
 ```
-###### /java/seedu/taskit/model/tag/TagColor.java
+###### \java\seedu\taskit\model\tag\TagColor.java
 ``` java
 public class TagColor {
     public static final String EMPTY_COLOR_VALUE = "";
@@ -533,7 +533,7 @@ public class TagColor {
     }
 }
 ```
-###### /java/seedu/taskit/model/task/Date.java
+###### \java\seedu\taskit\model\task\Date.java
 ``` java
     @Override
     public String toString() {
@@ -542,7 +542,7 @@ public class TagColor {
         return df.format(date);
     }
 ```
-###### /java/seedu/taskit/model/task/ReadOnlyTask.java
+###### \java\seedu\taskit\model\task\ReadOnlyTask.java
 ``` java
 /**
  * A read-only immutable interface for a Task in the task manager.
@@ -578,7 +578,7 @@ public interface ReadOnlyTask {
     }
 
 ```
-###### /java/seedu/taskit/ui/StatusBarFooter.java
+###### \java\seedu\taskit\ui\StatusBarFooter.java
 ``` java
     @Subscribe
     public void handleStorageFilePathChangedEvent(StorageFilePathChangedEvent event) {
@@ -586,7 +586,7 @@ public interface ReadOnlyTask {
     }
 }
 ```
-###### /java/seedu/taskit/ui/TaskCard.java
+###### \java\seedu\taskit\ui\TaskCard.java
 ``` java
 public class TaskCard extends UiPart<Region> {
 
@@ -612,7 +612,7 @@ public class TaskCard extends UiPart<Region> {
     private FlowPane tags;
 
 ```
-###### /java/seedu/taskit/ui/TaskCard.java
+###### \java\seedu\taskit\ui\TaskCard.java
 ``` java
     public TaskCard(ReadOnlyTask task, int displayedIndex) {
         super(FXML);
@@ -669,7 +669,7 @@ public class TaskCard extends UiPart<Region> {
     }
 }
 ```
-###### /resources/view/DarkTheme.css
+###### \resources\view\DarkTheme.css
 ``` css
 /*Styles for TaskCard */
 #cardPane {
@@ -710,7 +710,7 @@ public class TaskCard extends UiPart<Region> {
   -fx-padding: 5px;
 }
 ```
-###### /resources/view/TaskListCard.fxml
+###### \resources\view\TaskListCard.fxml
 ``` fxml
 
 <HBox id="cardPane" fx:id="cardPane" prefWidth="350.0" styleClass="card" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
