--- a/collated/main/A0163996J.md
+++ b/collated/main/A0163996J.md
@@ -1,5 +1,5 @@
 # A0163996J
-###### /java/seedu/taskit/logic/commands/AddCommand.java
+###### \java\seedu\taskit\logic\commands\AddCommand.java
 ``` java
 
 package seedu.taskit.logic.commands;
@@ -81,7 +81,7 @@ public class AddCommand extends Command {
 
 }
 ```
-###### /java/seedu/taskit/logic/parser/AddCommandParser.java
+###### \java\seedu\taskit\logic\parser\AddCommandParser.java
 ``` java
     /**
      * Parses the given {@code String} of arguments in the context of the AddCommand
@@ -122,7 +122,7 @@ public class AddCommand extends Command {
     }
 }
 ```
-###### /java/seedu/taskit/logic/parser/ParserUtil.java
+###### \java\seedu\taskit\logic\parser\ParserUtil.java
 ``` java
     /**
      * Parses a {@code Optional<String> Date} into an {@code Optional<Date>} if {@code date} is present.
@@ -150,7 +150,7 @@ public class AddCommand extends Command {
     }
 
 ```
-###### /java/seedu/taskit/model/task/Date.java
+###### \java\seedu\taskit\model\task\Date.java
 ``` java
 
 package seedu.taskit.model.task;
@@ -211,7 +211,7 @@ public class Date {
     }
 
 ```
-###### /java/seedu/taskit/model/task/Priority.java
+###### \java\seedu\taskit\model\task\Priority.java
 ``` java
 
 package seedu.taskit.model.task;
@@ -318,7 +318,7 @@ public class Priority {
     }
 }
 ```
-###### /java/seedu/taskit/model/task/ReadOnlyTask.java
+###### \java\seedu\taskit\model\task\ReadOnlyTask.java
 ``` java
     /**
      * Formats the task as text, showing all details.
@@ -339,7 +339,7 @@ public class Priority {
 
 
 ```
-###### /java/seedu/taskit/model/task/Task.java
+###### \java\seedu\taskit\model\task\Task.java
 ``` java
 
 package seedu.taskit.model.task;
@@ -522,7 +522,7 @@ public class Task implements ReadOnlyTask, Comparable<Task>{
     }
 
 ```
-###### /java/seedu/taskit/model/task/Title.java
+###### \java\seedu\taskit\model\task\Title.java
 ``` java
 
 package seedu.taskit.model.task;
@@ -588,7 +588,7 @@ public class Title {
 
 }
 ```
-###### /java/seedu/taskit/model/task/UniqueTaskList.java
+###### \java\seedu\taskit\model\task\UniqueTaskList.java
 ``` java
 package seedu.taskit.model.task;
 
@@ -641,7 +641,7 @@ public class UniqueTaskList implements Iterable<Task> {
     }
 
 ```
-###### /java/seedu/taskit/model/task/UniqueTaskList.java
+###### \java\seedu\taskit\model\task\UniqueTaskList.java
 ``` java
 
     /**
