--- a/collated/test/A0097141H.md
+++ b/collated/test/A0097141H.md
@@ -1,5 +1,5 @@
 # A0097141H
-###### /java/guitests/ListCommandTest.java
+###### \java\guitests\ListCommandTest.java
 ``` java
     @Test
 	public void list_allTasks_Success() {
@@ -17,7 +17,7 @@
     }
 
 ```
-###### /java/guitests/ListCommandTest.java
+###### \java\guitests\ListCommandTest.java
 ``` java
     @Test
     public void list_todayTasks_Success() {
@@ -48,7 +48,7 @@
     }
 }
 ```
-###### /java/guitests/MarkCommandTest.java
+###### \java\guitests\MarkCommandTest.java
 ``` java
 public class MarkCommandTest extends TaskManagerGuiTest {
 
@@ -91,7 +91,7 @@ public class MarkCommandTest extends TaskManagerGuiTest {
 
 }
 ```
-###### /java/seedu/taskit/testutil/TaskBuilder.java
+###### \java\seedu\taskit\testutil\TaskBuilder.java
 ``` java
     public TaskBuilder withDone(String done) throws IllegalValueException {
     	task.setDone(done);
@@ -114,7 +114,7 @@ public class MarkCommandTest extends TaskManagerGuiTest {
 
 }
 ```
-###### /java/seedu/taskit/testutil/TypicalTestTasks.java
+###### \java\seedu\taskit\testutil\TypicalTestTasks.java
 ``` java
     public TestTask[] getTypicalTasks() {
         return new TestTask[]{hw1, hw2, lunch, interview, shopping, cleaning, gymming};
