--- a/collated/test/A0141872E.md
+++ b/collated/test/A0141872E.md
@@ -1,5 +1,5 @@
 # A0141872E
-###### /java/guitests/AddCommandTest.java
+###### \java\guitests\AddCommandTest.java
 ``` java
     public void add_keyWords_Success() {
         assertKeywordsSuccess("add priority low tag leisure \"today movie night\"", td.today);
@@ -30,7 +30,7 @@
         Arrays.sort(expectedList);
         assertTrue(taskListPanel.isListMatching(expectedList));
 ```
-###### /java/guitests/EditCommandTest.java
+###### \java\guitests\EditCommandTest.java
 ``` java
     @Test
     public void edit_multipleFields_Success() throws Exception {
@@ -77,7 +77,7 @@
 
         assertEditSuccess(taskManagerIndex, taskManagerIndex, detailsToEdit, editedTask);
 ```
-###### /java/guitests/EditCommandTest.java
+###### \java\guitests\EditCommandTest.java
 ``` java
     @Test
     public void edit_notAllFieldsSpecified_failure() {
@@ -158,7 +158,7 @@
     }
 }
 ```
-###### /java/guitests/FindCommandTest.java
+###### \java\guitests\FindCommandTest.java
 ``` java
 public class FindCommandTest extends TaskManagerGuiTest {
 
@@ -212,7 +212,7 @@ public class FindCommandTest extends TaskManagerGuiTest {
     }
 }
 ```
-###### /java/guitests/guihandles/MenuBarPanelHandle.java
+###### \java\guitests\guihandles\MenuBarPanelHandle.java
 ``` java
 /**
  * Provides a handle for the panel containing the menubar
@@ -258,7 +258,7 @@ public class MenuBarPanelHandle extends GuiHandle {
     }
 }
 ```
-###### /java/guitests/ListCommandTest.java
+###### \java\guitests\ListCommandTest.java
 ``` java
     @Test
     public void list_undoneTasks_Success() {
@@ -279,7 +279,7 @@ public class MenuBarPanelHandle extends GuiHandle {
         assertResultMessage(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
     }
 ```
-###### /java/guitests/MenuBarPanelTest.java
+###### \java\guitests\MenuBarPanelTest.java
 ``` java
 public class MenuBarPanelTest extends TaskManagerGuiTest {
 
@@ -339,7 +339,7 @@ public class MenuBarPanelTest extends TaskManagerGuiTest {
 
 }
 ```
-###### /java/seedu/taskit/testutil/TestTask.java
+###### \java\seedu\taskit\testutil\TestTask.java
 ``` java
     @Override
     public boolean isDone() {
@@ -381,7 +381,7 @@ public class MenuBarPanelTest extends TaskManagerGuiTest {
     public boolean isDeadline() {
         return this.start.date == null && this.end.date != null;
 ```
-###### /java/seedu/taskit/testutil/TypicalTestTasks.java
+###### \java\seedu\taskit\testutil\TypicalTestTasks.java
 ``` java
     public TestTask[] getUndoneTypicalTasks() {
         return new TestTask[]{hw1, hw2, lunch, interview, shopping, cleaning, gymming};
