--- a/collated/main/A0141872E.md
+++ b/collated/main/A0141872E.md
@@ -1,5 +1,5 @@
 # A0141872E
-###### /java/seedu/taskit/commons/events/ui/MenuBarPanelSelectionChangedEvent.java
+###### \java\seedu\taskit\commons\events\ui\MenuBarPanelSelectionChangedEvent.java
 ``` java
 /**
 * Represents a selection change in the Menu Bar Panel
@@ -23,7 +23,7 @@ public class MenuBarPanelSelectionChangedEvent extends BaseEvent {
 
 }
 ```
-###### /java/seedu/taskit/logic/commands/EditCommand.java
+###### \java\seedu\taskit\logic\commands\EditCommand.java
 ``` java
 /**
  * Edits an existing task in TaskIt.
@@ -186,7 +186,7 @@ public class EditCommand extends Command {
     }
 
 ```
-###### /java/seedu/taskit/logic/commands/ListCommand.java
+###### \java\seedu\taskit\logic\commands\ListCommand.java
 ``` java
 /**
  * Lists all tasks in TaskIt to the user based on given parameters.
@@ -208,7 +208,7 @@ public class ListCommand extends Command {
     /**
      * List all relevant tasks in TaskIt.
      *
-     * @param args the requested parameter
+     * @param parameter the requested parameter
      */
     public ListCommand (String parameter) {
         this.parameter = parameter;
@@ -219,11 +219,11 @@ public class ListCommand extends Command {
 
         int taskListSize;
         switch (parameter) {
-        case LIST_ALL:
+        case ALL:
             model.updateFilteredListToShowAll();
             return new CommandResult(MESSAGE_SUCCESS_ALL);
 
-        case LIST_TODAY:
+        case TODAY:
             taskListSize = model.updateFilteredTaskList(parameter);
             if(taskListSize == 0){
                 return new CommandResult(MESSAGE_NO_TASK_TODAY);
@@ -231,7 +231,7 @@ public class ListCommand extends Command {
             return new CommandResult(String.format(MESSAGE_SUCCESS_SPECIFIC, parameter));
 
         default:
-            model.updateFilteredTaskList(parameter);
+            model.updateFilteredTaskList(parameter);// for all other valid parameters
             return new CommandResult(String.format(MESSAGE_SUCCESS_SPECIFIC, parameter));
         }
     }
@@ -240,7 +240,7 @@ public class ListCommand extends Command {
 
 
 ```
-###### /java/seedu/taskit/logic/commands/MarkCommand.java
+###### \java\seedu\taskit\logic\commands\MarkCommand.java
 ``` java
 /**
  * Mark a existing tasks done or undone in TaskIt based on index.
@@ -289,7 +289,7 @@ public class MarkCommand extends Command {
     }
 }
 ```
-###### /java/seedu/taskit/logic/parser/EditCommandParser.java
+###### \java\seedu\taskit\logic\parser\EditCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new EditCommand object
@@ -331,7 +331,7 @@ public class EditCommandParser {
 
     /**
      * Parses {@code Collection<String> tags} into an {@code Optional<UniqueTagList>} if {@code tags} is non-empty.
-     * If {@code tags} contain only one element which is an empty string, it will be parsed into a
+     * If {@code tags} contain null, it will be parsed into a
      * {@code Optional<UniqueTagList>} containing zero tags.
      */
     private Optional<UniqueTagList> parseTagsForEdit(Collection<String> tags) throws IllegalValueException {
@@ -347,17 +347,20 @@ public class EditCommandParser {
 
 }
 ```
-###### /java/seedu/taskit/logic/parser/ListCommandParser.java
+###### \java\seedu\taskit\logic\parser\ListCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new ListCommand object
  */
 public class ListCommandParser {
 
-    //TODO think a better way to do this
-    private static final List<String> PARAMETERS = Arrays.asList(LIST_ALL,LIST_DEADLINE, LIST_FLOATING, LIST_EVENT,
-            LIST_TODAY, LIST_OVERDUE, LIST_PRIORITY_LOW, LIST_PRIORITY_MEDIUM, LIST_PRIORITY_HIGH,DONE,UNDONE);
+    private static final List<String> PARAMETERS = Arrays.asList(ALL,DEADLINE, FLOATING, EVENT,
+            TODAY, OVERDUE, PRIORITY_LOW, PRIORITY_MEDIUM, PRIORITY_HIGH,DONE,UNDONE);
 
+    /**
+     * Parses the given {@code String} of arguments in the context of the ListCommand
+     * and returns a ListCommand object for execution.
+     */
     public Command parse(String args) {
         Optional<String> parseParameter = Optional.of(args);
         if (!parseParameter.isPresent()) {
@@ -372,18 +375,26 @@ public class ListCommandParser {
         return new ListCommand(parameter);
     }
 
+    /**
+     * Only parameter defined in parameter lists are allowed
+     */
     private boolean isValidParameter(String parameter) {
         return PARAMETERS.contains(parameter);
     }
 }
 ```
-###### /java/seedu/taskit/logic/parser/MarkCommandParser.java
+###### \java\seedu\taskit\logic\parser\MarkCommandParser.java
 ``` java
 /**
  * Parses input arguments and creates a new MarkCommand object
  */
 public class MarkCommandParser {
 
+    /**
+     * Parses the given {@code String} of arguments in the context of the MarkCommand
+     * check for validity of parameter parsed
+     * and returns a MarkCommand object for execution.
+     */
     public Command parse(String args) {
         List<Optional<String>> markInformation = ParserUtil.splitPreamble(args.trim().toLowerCase(),2);
 
@@ -397,7 +408,7 @@ public class MarkCommandParser {
             return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_NOT_MARKED));
         }
 
-        if(parameter.get().equals(DONE)||parameter.get().equals(UNDONE)){
+        if(parameter.get().equals(DONE)||parameter.get().equals(UNDONE)){//only allow done or undone as parameter
             return new MarkCommand (index.get(), parameter.get());
         } else {
             return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, MarkCommand.MESSAGE_USAGE));
@@ -405,7 +416,7 @@ public class MarkCommandParser {
     }
 }
 ```
-###### /java/seedu/taskit/logic/parser/ParserUtil.java
+###### \java\seedu\taskit\logic\parser\ParserUtil.java
 ``` java
     /**
      * Returns the specified parameter in the {@code parameter} if it only contains alphanumeric
@@ -419,7 +430,7 @@ public class MarkCommandParser {
         return Optional.of(parameter);
 
 ```
-###### /java/seedu/taskit/model/ModelManager.java
+###### \java\seedu\taskit\model\ModelManager.java
 ``` java
     public void updateTask(int filteredTaskListIndex, ReadOnlyTask editedTask)
             throws UniqueTaskList.DuplicateTaskException {
@@ -434,7 +445,7 @@ public class MarkCommandParser {
         taskManager.markTask(taskToMark, parameter);
         indicateAddressBookChanged();
 ```
-###### /java/seedu/taskit/model/ModelManager.java
+###### \java\seedu\taskit\model\ModelManager.java
 ``` java
     @Override
     public void updateFilteredTaskList(Set<String> keywords) {
@@ -451,7 +462,7 @@ public class MarkCommandParser {
         return filteredTasks.size();
     }
 ```
-###### /java/seedu/taskit/model/ModelManager.java
+###### \java\seedu\taskit\model\ModelManager.java
 ``` java
     private class ParameterQualifier implements Qualifier {
         private String parameter;
@@ -469,24 +480,24 @@ public class MarkCommandParser {
             case UNDONE:
                 return !task.isDone();
 
-            case LIST_OVERDUE:
+            case OVERDUE:
                 return task.isOverdue() && !task.isDone();
 
-            case LIST_PRIORITY_LOW:
-            case LIST_PRIORITY_MEDIUM:
-            case LIST_PRIORITY_HIGH:
+            case PRIORITY_LOW:
+            case PRIORITY_MEDIUM:
+            case PRIORITY_HIGH:
                 return task.getPriority().toString().equals(parameter);
 
-            case LIST_TODAY:
+            case TODAY:
                 return !task.isDone() && task.getEnd().isDateEqualCurrentDate();
 
-            case LIST_FLOATING:
+            case FLOATING:
                 return !task.isDone() && task.isFloating();
 
-            case LIST_EVENT:
+            case EVENT:
                 return !task.isDone() && task.isEvent();
 
-            case LIST_DEADLINE:
+            case DEADLINE:
                 return !task.isDone() && task.isDeadline();
 
             default:
@@ -500,7 +511,7 @@ public class MarkCommandParser {
         }
 
 ```
-###### /java/seedu/taskit/model/task/Date.java
+###### \java\seedu\taskit\model\task\Date.java
 ``` java
     public boolean isEndTimePassCurrentTime() {
         java.util.Date currentDate = new java.util.Date();
@@ -517,7 +528,7 @@ public class MarkCommandParser {
         }
         return false;
 ```
-###### /java/seedu/taskit/model/task/Task.java
+###### \java\seedu\taskit\model\task\Task.java
 ``` java
     @Override
     public boolean isDone() {
@@ -562,7 +573,7 @@ public class MarkCommandParser {
     }
 }
 ```
-###### /java/seedu/taskit/model/task/UniqueTaskList.java
+###### \java\seedu\taskit\model\task\UniqueTaskList.java
 ``` java
     /**
      * Mark the task in the list {@code taskToMark} with {@code parameter}.
@@ -586,7 +597,7 @@ public class MarkCommandParser {
         internalList.set(index, targetTask);
         sortTasks();
 ```
-###### /java/seedu/taskit/model/TaskManager.java
+###### \java\seedu\taskit\model\TaskManager.java
 ``` java
     /**
      * Mark the task in the list {@code taskToMark} with {@code parameter}.
@@ -598,7 +609,7 @@ public class MarkCommandParser {
             throws UniqueTaskList.DuplicateMarkingException {
         tasks.markTask(taskToMark, parameter);
 ```
-###### /java/seedu/taskit/ui/CommandBox.java
+###### \java\seedu\taskit\ui\CommandBox.java
 ``` java
     /**
      * display the relevant task lists based on the MenuBarSelectionChanged Event parameter
@@ -624,28 +635,28 @@ public class MarkCommandParser {
         switch (parameter) {
 
         case MENU_FLOATING_TASK:
-            return ListCommand.COMMAND_WORD + " " + LIST_FLOATING;
+            return ListCommand.COMMAND_WORD + " " + FLOATING;
 
         case MENU_EVENT_TASK:
-            return ListCommand.COMMAND_WORD + " " + LIST_EVENT;
+            return ListCommand.COMMAND_WORD + " " + EVENT;
 
         case MENU_DEADLINE_TASK:
-            return ListCommand.COMMAND_WORD + " " + LIST_DEADLINE;
+            return ListCommand.COMMAND_WORD + " " + DEADLINE;
 
         case MENU_TODAY_TASK:
-            return ListCommand.COMMAND_WORD + " " + LIST_TODAY;
+            return ListCommand.COMMAND_WORD + " " + TODAY;
 
         case MENU_OVERDUE_TASK:
-            return ListCommand.COMMAND_WORD + " " + LIST_OVERDUE;
+            return ListCommand.COMMAND_WORD + " " + OVERDUE;
 
         default:
-            return ListCommand.COMMAND_WORD + " " + LIST_ALL;
+            return ListCommand.COMMAND_WORD + " " + ALL;
         }
     }
 
 }
 ```
-###### /java/seedu/taskit/ui/MainWindow.java
+###### \java\seedu\taskit\ui\MainWindow.java
 ``` java
     void fillInnerParts() {
         taskListPanel = new TaskListPanel(getTaskListPlaceholder(), logic.getFilteredTaskList());
@@ -654,7 +665,7 @@ public class MarkCommandParser {
         commandBox = new CommandBox(getCommandBoxPlaceholder(), logic);
         menuBarPanel = new MenuBarPanel(getMenuBarPlaceholder());
 ```
-###### /java/seedu/taskit/ui/MainWindow.java
+###### \java\seedu\taskit\ui\MainWindow.java
 ``` java
     public MenuBarPanel getMenuBarPanel() {
         return this.menuBarPanel;
@@ -665,7 +676,7 @@ public class MarkCommandParser {
     }
 }
 ```
-###### /java/seedu/taskit/ui/MenuBarCard.java
+###### \java\seedu\taskit\ui\MenuBarCard.java
 ``` java
 /**
  * MenuBarCard defines format for individual menu bar item.
@@ -689,7 +700,7 @@ public class MenuBarCard extends UiPart<Region> {
 
 }
 ```
-###### /java/seedu/taskit/ui/MenuBarPanel.java
+###### \java\seedu\taskit\ui\MenuBarPanel.java
 ``` java
 public class MenuBarPanel extends UiPart<Region> {
     private final Logger logger = LogsCenter.getLogger(MenuBarPanel.class);
@@ -761,7 +772,7 @@ public class MenuBarPanel extends UiPart<Region> {
 
 }
 ```
-###### /java/seedu/taskit/ui/UiManager.java
+###### \java\seedu\taskit\ui\UiManager.java
 ``` java
     @Subscribe
     private void handleMenuBarPanelSelectionChangedEvent(MenuBarPanelSelectionChangedEvent event) {
@@ -770,7 +781,7 @@ public class MenuBarPanel extends UiPart<Region> {
     }
 }
 ```
-###### /resources/view/Extensions.css
+###### \resources\view\Extensions.css
 ``` css
 
 /* Styles for menuBarView*/
@@ -804,19 +815,10 @@ public class MenuBarPanel extends UiPart<Region> {
     -fx-border-color: #c9c9c9;
 }
 ```
-###### /resources/view/MainWindow.fxml
+###### \resources\view\MainWindow.fxml
 ``` fxml
 
-<?import java.net.URL?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-
-<VBox prefHeight="870.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="870.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <stylesheets>
       <URL value="@DarkTheme.css" />
       <URL value="@Extensions.css" />
@@ -848,7 +850,7 @@ public class MenuBarPanel extends UiPart<Region> {
        </AnchorPane>
       <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.3" VBox.vgrow="ALWAYS">
          <items>
-            <VBox fx:id="menuBar" prefWidth="130.0">
+            <VBox fx:id="menuBar" prefWidth="300.0">
                <padding>
          			<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          		</padding>
@@ -856,7 +858,7 @@ public class MenuBarPanel extends UiPart<Region> {
                   <AnchorPane fx:id="menuBarPanelPlaceholder" VBox.vgrow="ALWAYS" />
                </children>
             </VBox>
-            <VBox fx:id="taskList" prefWidth="520.0">
+            <VBox fx:id="taskList" prefWidth="700.0">
                 <padding>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </padding>
@@ -870,7 +872,7 @@ public class MenuBarPanel extends UiPart<Region> {
    </children>
 </VBox>
 ```
-###### /resources/view/MenuBarCard.fxml
+###### \resources\view\MenuBarCard.fxml
 ``` fxml
 
 <HBox id="menuBarCardPane" fx:id="menuBarCardPane" prefHeight="63.0" prefWidth="130.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
@@ -906,7 +908,7 @@ public class MenuBarPanel extends UiPart<Region> {
     </children>
 </HBox>
 ```
-###### /resources/view/MenuBarPanel.fxml
+###### \resources\view\MenuBarPanel.fxml
 ``` fxml
 
 <?import java.net.URL?>
