--- a/collated/test/A0163996J.md
+++ b/collated/test/A0163996J.md
@@ -1,11 +1,11 @@
 # A0163996J
-###### /java/guitests/EditCommandTest.java
+###### \java\guitests\EditCommandTest.java
 ``` java
 
     public void sortTasksList() {
         Arrays.sort(expectedTasksList);
 ```
-###### /java/guitests/EditCommandTest.java
+###### \java\guitests\EditCommandTest.java
 ``` java
     @Test
     public void edit_priority_success() throws Exception {
@@ -41,7 +41,7 @@
 
         assertEditSuccess(taskManagerIndex, taskManagerIndex, detailsToEdit, editedTask);
 ```
-###### /java/seedu/taskit/logic/LogicManagerTest.java
+###### \java\seedu\taskit\logic\LogicManagerTest.java
 ``` java
 
     @Test
@@ -69,7 +69,7 @@
     }
 
 ```
-###### /java/seedu/taskit/testutil/TaskBuilder.java
+###### \java\seedu\taskit\testutil\TaskBuilder.java
 ``` java
 
     public TaskBuilder withPriority(String priority) throws IllegalValueException {
@@ -88,7 +88,7 @@
     }
 
 ```
-###### /java/seedu/taskit/testutil/TestTask.java
+###### \java\seedu\taskit\testutil\TestTask.java
 ``` java
 
 package seedu.taskit.testutil;
@@ -205,7 +205,7 @@ public class TestTask implements ReadOnlyTask, Comparable<TestTask> {
     }
 
 ```
-###### /java/seedu/taskit/testutil/TypicalTestTasks.java
+###### \java\seedu\taskit\testutil\TypicalTestTasks.java
 ``` java
 
 package seedu.taskit.testutil;
